force-app/main/default/objects/Related_Agreement__c/Related_Agreement__c.object-meta.xml
<CustomObject>
    <label>Related Agreement</label>
    <nameField>
        <label>Related Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>