force-app/main/default/objects/Related_Agreement__c/fields/Agreement_Reason_Other_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Reason_Other_Explanation__c</fullName>
    <label>Agreement Reason Other Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>