force-app/main/default/objects/Related_Agreement__c/fields/Amendment__c.field-meta.xml
<CustomField>
    <fullName>Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment</label>
    <type>Checkbox</type>
</CustomField>