force-app/main/default/objects/Related_Agreement__c/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <label>Amendment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>