force-app/main/default/objects/Related_Agreement__c/fields/AT_T_Approved_Capital_Investment__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Approved_Capital_Investment__c</fullName>
    <label>AT&amp;T Approved Capital Investment</label>
    <type>Date</type>
</CustomField>