force-app/main/default/objects/Related_Agreement__c/fields/AT_T_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>AT_T_PO_Amount__c</fullName>
    <label>AT&amp;T PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>