force-app/main/default/objects/Related_Agreement__c/fields/AT_T_SDP_Ground_Lease_Date__c.field-meta.xml
<CustomField>
    <fullName>AT_T_SDP_Ground_Lease_Date__c</fullName>
    <label>AT&amp;T SDP Ground Lease Date</label>
    <type>Date</type>
</CustomField>