force-app/main/default/objects/Related_Agreement__c/fields/AT_T_SDP_Site_Acq_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>AT_T_SDP_Site_Acq_Complete_Date__c</fullName>
    <label>AT&amp;T SDP Site Acq Complete Date</label>
    <type>Date</type>
</CustomField>