force-app/main/default/objects/Related_Agreement__c/fields/BD_Lead_email__c.field-meta.xml
<CustomField>
    <fullName>BD_Lead_email__c</fullName>
    <formula>Site__r.BD_Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BD Lead email</label>
    <type>Text</type>
</CustomField>