force-app/main/default/objects/Related_Agreement__c/fields/Days_Until_Lease_End__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Lease_End__c</fullName>
    <description>Calculates the Number of Days Until the Lease Ends Based on the End Date field</description>
    <formula>if(NOT(ISBLANK(End_Date__c)), End_Date__c-Today(), -1)</formula>
    <inlineHelpText>Calculates the Number of Days Until the Lease Ends Based on the End Date field if End Date is not null. If the End Date is null, this will return -1</inlineHelpText>
    <label>Days Until Lease End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>