force-app/main/default/objects/Related_Agreement__c/fields/Easement_Grantor__c.field-meta.xml
<CustomField>
    <fullName>Easement_Grantor__c</fullName>
    <label>Easement Grantor</label>
    <type>TextArea</type>
</CustomField>