force-app/main/default/objects/Related_Agreement__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Amount</fullName>
            </value>
            <value>
                <fullName>By Percent</fullName>
            </value>
            <value>
                <fullName>Estimated CPI - Provided by Tenant</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>