force-app/main/default/objects/Related_Agreement__c/fields/Executed_Not_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Executed_Not_Commenced__c</fullName>
    <formula>if(Is_Commenced__c,0, Rent_Increase_Decrease_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executed - Not Commenced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>