force-app/main/default/objects/Related_Agreement__c/fields/Executed_SLA__c.field-meta.xml
<CustomField>
    <fullName>Executed_SLA__c</fullName>
    <formula>Agreement__r.Executed_SLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executed SLA</label>
    <type>Checkbox</type>
</CustomField>