force-app/main/default/objects/Related_Agreement__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>