force-app/main/default/objects/Related_Agreement__c/fields/FE_Date__c.field-meta.xml
<CustomField>
    <fullName>FE_Date__c</fullName>
    <label>Contract Fully Executed Date</label>
    <type>Date</type>
</CustomField>