force-app/main/default/objects/Related_Agreement__c/fields/Fully_Executed_Vendor_s_Release_and_Waiv__c.field-meta.xml
<CustomField>
    <fullName>Fully_Executed_Vendor_s_Release_and_Waiv__c</fullName>
    <label>Fully Executed Vendor’s Release and Waiv</label>
    <type>Date</type>
</CustomField>