force-app/main/default/objects/Related_Agreement__c/fields/High_Cost_Justification__c.field-meta.xml
<CustomField>
    <fullName>High_Cost_Justification__c</fullName>
    <label>High Cost Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>