force-app/main/default/objects/Related_Agreement__c/fields/Initial_Rent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rent__c</fullName>
    <label>Initial Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>