force-app/main/default/objects/Related_Agreement__c/fields/Installement_Details__c.field-meta.xml
<CustomField>
    <fullName>Installement_Details__c</fullName>
    <label>Installement Details</label>
    <type>TextArea</type>
</CustomField>