force-app/main/default/objects/Related_Agreement__c/fields/Is_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Is_Commenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Commenced</label>
    <type>Checkbox</type>
</CustomField>