force-app/main/default/objects/Related_Agreement__c/fields/Lease_Description__c.field-meta.xml
<CustomField>
    <fullName>Lease_Description__c</fullName>
    <label>Lease Description</label>
    <type>TextArea</type>
</CustomField>