force-app/main/default/objects/Related_Agreement__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>Anchor PassThrough</fullName>
            </value>
            <value>
                <fullName>Anchor Tenant</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Easement (access/utility)</fullName>
            </value>
            <value>
                <fullName>GLBO</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>SDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>