force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_AgreementID__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_AgreementID__c</fullName>
    <label>LeaseNet AgreementID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>