force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Contracting_Company__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Contracting_Company__c</fullName>
    <label>LeaseNet Contracting Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>