force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Current_Amount__c</fullName>
    <label>LeaseNet Current Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>