force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Current_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Current_Term_Months__c</fullName>
    <label>LeaseNet Current Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>