force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Frequency__c</fullName>
    <label>LeaseNet Frequency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>