force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Monthly_Rate__c</fullName>
    <label>LeaseNet Monthly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>