force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_NetSuiteDept__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_NetSuiteDept__c</fullName>
    <label>LeaseNet NetSuiteDept</label>
    <length>50</length>
    <type>Text</type>
</CustomField>