force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Number_Of_Renewals__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Number_Of_Renewals__c</fullName>
    <label>LeaseNet Number Of Renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>