force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Rent_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Rent_Commencement_Date__c</fullName>
    <label>LeaseNet Rent Commencement Date</label>
    <type>Date</type>
</CustomField>