force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Rev_Share_Notes__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Rev_Share_Notes__c</fullName>
    <label>LeaseNet Rev Share Notes</label>
    <type>TextArea</type>
</CustomField>