force-app/main/default/objects/Related_Agreement__c/fields/LeaseNet_Status__c.field-meta.xml
<CustomField>
    <fullName>LeaseNet_Status__c</fullName>
    <label>LeaseNet Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>