force-app/main/default/objects/Related_Agreement__c/fields/LeaseNetPrimaryUse__c.field-meta.xml
<CustomField>
    <fullName>LeaseNetPrimaryUse__c</fullName>
    <label>LeaseNetPrimaryUse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>