force-app/main/default/objects/Related_Agreement__c/fields/Legal_Approved_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approved_Termination_Date__c</fullName>
    <label>Legal Approved Termination Date</label>
    <type>Date</type>
</CustomField>