force-app/main/default/objects/Related_Agreement__c/fields/LMPS_Package_Number__c.field-meta.xml
<CustomField>
    <fullName>LMPS_Package_Number__c</fullName>
    <label>LMPS Package Number</label>
    <type>TextArea</type>
</CustomField>