force-app/main/default/objects/Related_Agreement__c/fields/Netgain_Modification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Netgain_Modification_Notes__c</fullName>
    <label>Netgain Modification Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>