force-app/main/default/objects/Related_Agreement__c/fields/NetSuite_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_External_ID__c</fullName>
    <label>NetSuite External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>