force-app/main/default/objects/Related_Agreement__c/fields/NetSuite_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Last_Updated__c</fullName>
    <label>NetSuite Last Updated</label>
    <type>Date</type>
</CustomField>