force-app/main/default/objects/Related_Agreement__c/fields/NetSuite_Update_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Update_Status_Message__c</fullName>
    <label>NetSuite Update Status Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>