force-app/main/default/objects/Related_Agreement__c/fields/Other_Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Escalation_Notes__c</fullName>
    <label>Other Escalation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>