force-app/main/default/objects/Related_Agreement__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <label>Payee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>