force-app/main/default/objects/Related_Agreement__c/fields/Push_To_NetGain__c.field-meta.xml
<CustomField>
    <fullName>Push_To_NetGain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push To NetGain</label>
    <type>Checkbox</type>
</CustomField>